refactor: Exchange 외부 API(환율 조회) 정상 동작 테스트 및 각 메서드 주석 추가